[project]
name = "code_writer"
version = "0.1.0"
description = "code_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
kickoff = "code_writer.main:kickoff"
run_crew = "code_writer.main:run_crew"
plot = "code_writer.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_writer"]

[tool.crewai]
type = "flow"
